# hexed

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
app/: Cargo.toml
app/src/: ai.rs  highlight.rs  main.rs  openwith.rs  theme.rs  vt.rs
app/templates/: bmp.bt  elf.bt  gif.bt  pe.bt  png.bt  wav.bt  zip.bt
crates/hexed-bt/: Cargo.toml
crates/hexed-bt/src/: ast.rs  interp.rs  lexer.rs  lib.rs  parser.rs
crates/hexed-core/: Cargo.toml
crates/hexed-core/examples/: triage.rs
crates/hexed-core/src/: authenticode.rs  buffer.rs  carve.rs  diff.rs  disasm.rs  entropy.rs  export.rs  hashes.rs  histogram.rs  inspect.rs  ioc.rs  lib.rs  ops.rs  pe.rs  search.rs  signatures.rs  strings.rs  xor.rs  yara.rs
scripts/: make-macos-app.sh
